# python-packaging

./: README.md  pyproject.toml
src/python_package_sakshi.egg-info/: PKG-INFO  SOURCES.txt
